--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -1,7 +1,7 @@
 #homepage {
   width: 100%;
   height: 90vh;
-  background-color: azure;
+  background-color: rgb(242, 253, 253);
   display: flex;
 }
 
