--- a/src/components/main/productcard.css
+++ b/src/components/main/productcard.css
@@ -1,16 +1,68 @@
 .productCard {
   display: flex;
   flex-direction: column;
-  border: 1px solid rgb(201, 201, 201);
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   align-items: center;
   margin: 20px;
   margin-left: 0;
   width: 250px;
-  border-radius: 10px;
-  height: 400px;
+  border-radius: 20px 20px 10px 10px;
+  height: 420px;
+  transition: all 0.5s;
+  background-color: rgba(214, 246, 255, 0.294);
+}
+
+.productCard img:hover {
+  transform: scale(1.02);
+  cursor: pointer;
 }
 
 .productCard img {
   max-width: 250px;
-  border-radius: 10px 10px 0 0;
+  border-radius: 10px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  transition: all 0.5s;
+}
+
+.productCard__text {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  word-break: break-all;
+}
+
+.productCard__text h3 {
+  font-size: 18px;
+  min-height: 50px;
+}
+
+.productCard__text h4 {
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.productCard__priceAndStock {
+  margin-top: 18px;
+  margin-bottom: 6px;
+  display: flex;
+  font-size: 14px;
+  justify-content: space-between;
+  font-weight: 500;
+  padding-top: 5px;
+}
+
+.productCard button {
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  border: none;
+  height: 35px;
+  border-radius: 15px;
+  transition: all 0.3s;
+  background-color: white;
+}
+.productCard button:hover {
+  transform: scale(1.02);
+  cursor: pointer;
 }
