--- a/src/components/main/productcard.css
+++ b/src/components/main/productcard.css
@@ -29,8 +29,10 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 10px 12px;
   word-break: break-all;
+
+  width: 100%;
 }
 
 .productCard__text h3 {
@@ -41,28 +43,31 @@
 .productCard__text h4 {
   font-size: 15px;
   font-weight: 500;
+  margin-bottom: 1px;
 }
 
 .productCard__priceAndStock {
   margin-top: 18px;
-  margin-bottom: 6px;
+  margin-bottom: 5px;
   display: flex;
   font-size: 14px;
   justify-content: space-between;
   font-weight: 500;
-  padding-top: 5px;
+  padding-top: 2px;
+  margin-bottom: 7px;
 }
 
 .productCard button {
-  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
-    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   border: none;
   height: 35px;
   border-radius: 15px;
   transition: all 0.3s;
   background-color: white;
+  font-family: "Montserrat";
+  width: 100%;
 }
 .productCard button:hover {
-  transform: scale(1.02);
+  transform: scale(1.01);
   cursor: pointer;
 }
