--- a/src/components/checkout/checkOut.css
+++ b/src/components/checkout/checkOut.css
@@ -14,6 +14,35 @@
   transition: all 1;
   animation: fade-in 1s;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.total button {
+  width: 10%;
+  padding: 15px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  border: none;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 15px;
+  border-radius: 15px;
+  margin-top: 10px;
+  transition: all 0.4s;
+}
+
+.total button a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.total button:hover {
+  transform: scale(1.02);
+  cursor: pointer;
+}
+
+.noItems {
+  margin: 25px;
 }
 
 @keyframes fade-in {
