--- a/src/components/productpage/productpage.css
+++ b/src/components/productpage/productpage.css
@@ -1,6 +1,5 @@
 #productInfo {
   width: 100%;
-  border: 1px solid red;
   height: 85vh;
   display: flex;
   flex-direction: column;
@@ -8,27 +7,53 @@
 }
 
 #productInfo img {
-  width: 250px;
+  width: 230px;
   margin-bottom: 20px;
   border-radius: 15px;
 }
 
 .productInfo__card {
-  margin-top: 25px;
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
-  border: 1px solid green;
   width: 70%;
-  align-items: center;
 }
 
 .productInfo__card h3 {
+  font-size: 22px;
+}
+
+.productInfo__card h6 {
+  font-size: 16px;
+  color: rgb(120, 120, 120);
+  font-weight: 400;
+  margin: 8px 0;
+  margin-bottom: 13px;
 }
 
 .productInfo__description p {
-  max-width: 350px;
+  max-width: 560px;
+  margin-bottom: 20px;
 }
 
 .productInfo__purchase {
   display: flex;
+  align-items: center;
+}
+
+.productInfo__purchase button {
+  width: 200px;
+  height: 50px;
+  border: none;
+  border-radius: 12px;
+  margin-left: 15px;
+  font-family: "Montserrat", Tahoma, Geneva, Verdana, sans-serif;
+  transition: all 0.5s;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+
+.productInfo__purchase button:hover {
+  transform: scale(1.02);
+  cursor: pointer;
 }
