--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -3,11 +3,22 @@
   height: 90vh;
   background-color: rgb(242, 253, 253);
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+#homepage input {
+  width: 20%;
+  margin-top: 25px;
+  border: none;
 }
 
 .allProductsList {
   margin: 0 25px;
   display: flex;
   flex-wrap: wrap;
+}
+
+.loading {
+  margin-top: 20px;
 }
