--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -11,6 +11,10 @@
   width: 20%;
   margin-top: 25px;
   border: none;
+  padding: 10px;
+  border: 1px solid rgb(208, 207, 207);
+  border-radius: 10px;
+  font-size: 18;
 }
 
 .allProductsList {
