--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -1,26 +1,38 @@
 #homepage {
   width: 100%;
   height: 90vh;
-  background-color: rgb(242, 253, 253);
+
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 #homepage input {
-  width: 20%;
+  text-align: center;
+  width: 80%;
+  max-width: 280px;
   margin-top: 25px;
   border: none;
   padding: 10px;
   border: 1px solid rgb(208, 207, 207);
   border-radius: 10px;
-  font-size: 18;
+  font-size: 23;
+  font-weight: 500;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#homepage input:active,
+#homepage input:focus {
+  text-align: left;
 }
 
 .allProductsList {
-  margin: 0 25px;
+  margin: 20px 25px;
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
 }
 
 .loading {
