--- a/src/components/checkout/checkOut.css
+++ b/src/components/checkout/checkOut.css
@@ -1,5 +1,4 @@
 #checkOut {
-  height: 60vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,6 +10,7 @@
 }
 
 .checkOut__itemsRow {
+  margin-top: 30px;
   width: 90%;
   transition: all 1.3s;
 }
@@ -24,6 +24,7 @@
 }
 
 .total button {
+  min-width: 10px;
   width: 10%;
   padding: 15px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
@@ -34,6 +35,7 @@
   border-radius: 15px;
   margin-top: 10px;
   transition: all 0.4s;
+  min-width: 100px;
 }
 
 .total button a {
@@ -80,6 +82,16 @@
 .checkOut__itemLeft {
   display: flex;
   flex-wrap: wrap;
+  padding-right: 20px;
+  flex: 0.7;
+  text-align: left;
+  min-width: 200px;
+}
+
+@media (max-width: 500px) {
+  .checkOut__itemLeft h3 {
+    font-size: 15px;
+  }
 }
 
 .checkOut__itemLeft div {
