--- a/src/components/main/productcard.css
+++ b/src/components/main/productcard.css
@@ -58,6 +58,11 @@
   margin-bottom: 7px;
 }
 
+.productCard a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .productCard button {
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   border: none;
