--- a/src/components/categorypage/categorypage.css
+++ b/src/components/categorypage/categorypage.css
@@ -7,14 +7,33 @@
 }
 
 .categoryPage__artist {
+  margin-bottom: 20px;
+
   display: flex;
   border: 1px solid red;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  padding: 30px 0;
+}
+
+.categoryPage__artist h2 {
+  margin: 10px 0;
+  color: white;
+}
+
+.categoryPage__artist p {
+  max-width: 800px;
+  color: white;
+  font-weight: 500;
+  margin: 10px 15px;
+  margin-top: 25px;
 }
 
 .categoryPage__artist img {
-  height: 200px;
+  width: 220px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .categoryPage__artistProducts {
@@ -25,6 +44,8 @@
 }
 
 .categoryPage__productsRow {
+  padding: 0 10px;
+  flex-wrap: wrap;
   border: 1px solid red;
   display: flex;
   width: 100%;
