--- a/src/components/productpage/productpage.css
+++ b/src/components/productpage/productpage.css
@@ -32,10 +32,15 @@
 
 .productInfo__card h6 {
   font-size: 15px;
-  color: rgb(120, 120, 120);
-  font-weight: 400;
+  color: rgb(218, 218, 218);
+  font-weight: 500;
+
   margin: 8px 0;
   margin-bottom: 13px;
+}
+
+.productInfo__card h6 {
+  cursor: pointer;
 }
 
 .productInfo__description p {
