--- a/src/components/productpage/productpage.css
+++ b/src/components/productpage/productpage.css
@@ -30,6 +30,11 @@
   text-align: left;
 }
 
+.productInfo__card a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .productInfo__card h6 {
   font-size: 15px;
   color: rgb(218, 218, 218);
@@ -37,6 +42,11 @@
 
   margin: 8px 0;
   margin-bottom: 13px;
+  transition: all 0.5s;
+}
+
+.productInfo__card h6:hover {
+  transform: scale(1.05);
 }
 
 .productInfo__card h6 {
