--- a/src/components/categorypage/categorypage.css
+++ b/src/components/categorypage/categorypage.css
@@ -13,6 +13,8 @@
   align-items: center;
   width: 100%;
   padding: 30px 0;
+  background-position: center;
+  background-size: cover;
 }
 
 .categoryPage__artist h2 {
